Updated pipeline game sub-nav

--- a/projects/pipelinegame.html
+++ b/projects/pipelinegame.html
@@ -142,9 +142,9 @@
                         </a>
                     </div>
                     <div>
-                        <a class="text-decoration-none me-md-auto" href="dragonfire.html">
+                        <a class="text-decoration-none me-md-auto" href="baristagame.html">
                             <span class="icon-link">
-                            Dragon Fire
+                            So You Want To Be A Barista?
                             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-controller" viewBox="0 0 16 16">
                                 <use href="#arrow-right-circle"></use>
                             </svg>
