--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                         <div id="navbarToggle" class="collapse navbar-collapse justify-content-sm-end py-3">
                             <ul class="nav nav-underline flex-column flex-lg-row">
                                 <li class="nav-item px-2">
-                                    <a class="nav-link" aria-current="page" href="Index.html">Projects</a>
+                                    <a class="nav-link" aria-current="page" href="index.html">Projects</a>
                                 </li>
                                 <li class="nav-item px-2">
                                     <a class="nav-link active" href="about.html">About</a>
