Fixed spelling mistakes in index.html
* Corrected 'unfortunately' in Potions Please blurb
* Corrected 'otome' in Fictif blurb

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="col col-lg-7 py-lg-0 py-3 section-header">
-                        <h2> Marvel Snap </h2>
+                        <h2>Marvel Snap</h2>
                         <p class="lead">
                             Marvel Snap is an award winning, digital collectable card game developed by <a href="https://seconddinner.com/" class="text-decoration-none" target="_blank"><span class="fw-bold">Second Dinner</span></a> in which 
                             players build a deck of twelve Marvel characters and battle against one another to increase (or decrease) their seasonal rank.
@@ -202,7 +202,7 @@
                     <div class="col col-lg-7 py-lg-0 py-3 section-header">
                         <h2> Fictif </h2>
                         <p class="lead">
-                            Fictif is a collection of otomie inspired interactive visual novels in which players play as the main character and choose which character they like to romance throughout each story.
+                            Fictif is a collection of otome inspired interactive visual novels in which players play as the main character and choose which character they like to romance throughout each story.
                         </p>
                         <p>
                             Fictif was initially developed by a company called Nix Hydra, but is now owned and maintained by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
@@ -248,7 +248,7 @@
                             for the townfolk in various locations.
                         </p>
                         <p>
-                            Potions Please! had a limited release and unfortunetly was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
+                            Potions Please! had a limited release and unfortunately was shelved prior to Nix Hydra's acquisition by <a href="https://home.dorian.live/" class="text-decoration-none" target="_blank">Dorian.live</a>.
                         </p>
                     </div>
                 </div>
