--- a/projects/discobear.html
+++ b/projects/discobear.html
@@ -290,7 +290,7 @@
                                         Our inspirations included <span class="fst-italic">SUPER PSTW ACTION RPG</span>, <span class="fst-italic">Octodad</span>, <span class="fst-italic">SpongeBob</span>, and internet meme humor. 
                                     </p>
                                     <p>
-                                        Brian and I separately made a prototype on the topic; one involving howling siamangs and
+                                        We each made a prototype on the topic; one involving howling siamangs and
                                         another with a polar bear dancing to <span class="fst-italic">You Should Be Dancing</span> by the Bee Gees. After
                                         testing it with our peers, we found that people responded well to a dancing polar bear
                                         and moved forward with the concept. The mechanics of the siamangs
